# wildcard-pattern-matching

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: matcher.h
lib/src/: matcher.cpp
tests/: CMakeLists.txt  main.cpp
