cmake_minimum_required(VERSION 3.16.0)

# Define the Project Name and Description
project(
    FDSA_Mini_Project 
    VERSION 0.1.0
    LANGUAGES CXX 
    DESCRIPTION "Pattern matching application for 'BITS F312: Foundations of Data Structres and Algorithms' AY 2022-23 Sem I")


if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)

    # Set required C++ Standard
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)

    # Let's ensure -std=c++xx instead of -std=g++xx
    set(CMAKE_CXX_EXTENSIONS OFF)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

    set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")


    # Let's nicely support folders in IDEs
    set_property(GLOBAL PROPERTY USE_FOLDERS ON)

    # Testing only available if this is the main app
    # Note this needs to be done in the main CMakeLists
    # since it calls enable_testing, which must be in the
    # main CMakeLists.
    include(CTest)
endif()

# FetchContent added in CMake 3.11, downloads during the configure step
include(FetchContent)

# The compiled library code is here
add_subdirectory(lib)

# The executable code is here
add_subdirectory(app)

# The testing code is here
add_subdirectory(tests)